[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metagraphed"
version = "0.4.2"
description = "Thin Python client for metagraphed — the operational + integration registry for Bittensor subnets (api.metagraph.sh)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "JSONbored" }]
keywords = ["bittensor", "metagraph", "subnet", "registry", "api-client"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

# The base package is dependency-free (stdlib only). The async client pulls
# httpx behind this extra: `pip install 'metagraphed[async]'`.
[project.optional-dependencies]
async = ["httpx>=0.27"]
test = ["httpx>=0.28.1"]

[project.urls]
Homepage = "https://metagraph.sh"
Repository = "https://github.com/JSONbored/metagraphed"

[tool.hatch.build.targets.wheel]
packages = ["src/metagraphed"]
